change name of cv

--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
     <p>Email me in :<a href="mailto:shahaxay34@gmail.com"
             style="color:brown ;text-decoration:none;">shahaxay34@gmail.com</a>
     </p>
-    <button onclick="DownloadFile('resume.pdf')">download cv</button>
+    <button onclick="DownloadFile('Akshay_resume.pdf')">download cv</button>
     <br>
 </body>
 
