improving the button size

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div class="footer">
             <p> © 2022 Akshay Sah © Akk.ltd</p>
             <h3>stay connected</h3>
-            <a href="https://www.instagram.com/axayshah34/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/akshay.shah.75436531"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://github.com/Shahaxay"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/sahAkshay/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/axayshah34/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/akshay.shah.75436531" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://github.com/Shahaxay" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/sahAkshay/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
 
 
