--- a/work/index.htm
+++ b/work/index.htm
@@ -15,31 +15,31 @@
     <h2 style="padding-bottom:2rem;">Works and Projects</h2>
     <div class="work">
         <span class="project"> <img src="./forest.jpg" alt="">
-           <p><a href="https://yours-todolist.herokuapp.com/">to do web app</a> </p>
+           <p><a href="https://yours-todolist.herokuapp.com/" target="_blank">to do web app</a> </p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://github.com/Shahaxay/project-certificate-generator.git">certificate generator web app</a></p>
+            <p><a href="https://github.com/Shahaxay/project-certificate-generator.git" target="_blank">certificate generator web app</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://github.com/Shahaxay/project-typingtest.git">typing speed test web app</a></p>
+            <p><a href="https://github.com/Shahaxay/project-typingtest.git" target="_blank">typing speed test web app</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://dataaggrigation.herokuapp.com/">Data collection web app</a></p>
+            <p><a href="https://dataaggrigation.herokuapp.com/" target="_blank">Data collection web app</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://github.com/Shahaxay/project-UI-for-CUAD-operation-on-apache-server-db.git">UI for Database administrator web app</a></p>
+            <p><a href="https://github.com/Shahaxay/project-UI-for-CUAD-operation-on-apache-server-db.git" target="_blank">UI for Database administrator web app</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://github.com/Shahaxay/portfolio.git">Responsive portfolio website</a></p>
+            <p><a href="https://github.com/Shahaxay/portfolio.git" target="_blank">Responsive portfolio website</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://github.com/Shahaxay/fakeTextNewsDetectionSystem.git">ML project:Fake Text news detection system</a></p>
+            <p><a href="https://github.com/Shahaxay/fakeTextNewsDetectionSystem.git" target="_blank">ML project:Fake Text news detection system</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://github.com/Shahaxay/craditCardFraudDetectionSystem.git">ML project:Credit card fraud detection system</a></p>
+            <p><a href="https://github.com/Shahaxay/craditCardFraudDetectionSystem.git" target="_blank">ML project:Credit card fraud detection system</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
-            <p><a href="https://github.com/Shahaxay/Dynamic-optioned-registration-form.git">Dynammic optioned Registration form</a></p>
+            <p><a href="https://github.com/Shahaxay/Dynamic-optioned-registration-form.git" target="_blank">Dynammic optioned Registration form</a></p>
         </span>
         <span class="project"> <img src="./forest.jpg" alt="">
             <p><a href="#">ongoing projects</a></p>
