improving button size

--- a/work/index.htm
+++ b/work/index.htm
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h2 style="padding-bottom:2rem;">Works and Projects</h2>
+    <h2>Works and Projects</h2>
     <div class="work">
         <span class="project"> <img src="./forest.jpg" alt="">
            <p><a href="https://yours-todolist.herokuapp.com/" target="_blank">to do web app</a> </p>
