--- a/home/index.html
+++ b/home/index.html
@@ -22,7 +22,7 @@
     <div class="intro">
         <div style="width:90%;">
             <h2>Akshay shah</h2>
-        <p class="white">-a full stack web developer and android developer</p>
+        <p class="white">-A Software Developer</p>
         <button onclick="introduce()"> know me</button>
         <button onclick="location.href='mailto:shahaxay34@gmail.com?subject= Got Project For You&body=project brief&cc=officialuse71@gmail.com';">Hire me</button>
         </div>
